// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renderForm should match a snapshot when ERROR true 1`] = `
<Form
  data-test="login-form"
>
  <Unknown
    dataTest="login-email"
    id="email"
    labelText="Email"
    name="email"
    placeholder="name@address.com"
    type="email"
  />
  <Unknown
    dataTest="login-password"
    id="password"
    labelText="Password"
    name="password"
    placeholder="Enter your password"
    type="password"
  />
  <Unknown>
    <Unknown
      disabled={false}
      loading={false}
      type="submit"
      variant="primary"
    >
      Login
    </Unknown>
  </Unknown>
  <Unknown
    message="Login failed, user credentials not recognised"
    type="danger"
  />
</Form>
`;

exports[`Login renderForm should match a snapshot when ERROR true 2`] = `
<Form
  data-test="login-form"
>
  <Unknown
    dataTest="login-email"
    id="email"
    labelText="Email"
    name="email"
    placeholder="name@address.com"
    type="email"
  />
  <Unknown
    dataTest="login-password"
    id="password"
    labelText="Password"
    name="password"
    placeholder="Enter your password"
    type="password"
  />
  <Unknown>
    <Unknown
      disabled={false}
      loading={false}
      type="submit"
      variant="primary"
    >
      Login
    </Unknown>
  </Unknown>
</Form>
`;

exports[`Login should match a snapshot 1`] = `
<div>
  <div
    className="undefined false"
  >
    <Component
      isCentered={true}
    >
      Sign in
    </Component>
    <p
      className="pb-8"
    >
      Welcome to Reapit Online Check List
    </p>
    <Formik
      initialValues={
        Object {
          "email": "",
          "password": "",
        }
      }
      onSubmit={[Function]}
      validate={[Function]}
    >
      <Component />
    </Formik>
  </div>
  <div>
    <img
      alt="Reapit Graphic"
      src=""
    />
  </div>
</div>
`;

exports[`Login should match a snapshot when hasSession 1`] = `
<Redirect
  to="/"
/>
`;
